--- a/HTML-CSS/2020_legumontagne/css/scss/_menu.scss
+++ b/HTML-CSS/2020_legumontagne/css/scss/_menu.scss
@@ -4,6 +4,10 @@ $green : #7AB51D;
 $yellow : #F7CB06;
 $black : #000000;
 
+.bg_photo{
+  height: 512px;
+}
+
 .filtre_vert{
   background-color: $green;
   opacity: 75%;
@@ -68,15 +72,17 @@ $black : #000000;
 }
 
 .image_fond{
-  position: relative;
+  position: absolute;
   top: 0;
   right: 0;
+  z-index: -1;
 }
 
 .row{
   display: flex;
   justify-content: center;
   height: 25px;
+  z-index: -1;
   .cadre_vert{
     flex-grow: 1;
     background-color: $green;
