--- a/HTML-CSS/2020_legumontagne/css/style.css
+++ b/HTML-CSS/2020_legumontagne/css/style.css
@@ -1,41 +1,41 @@
-/* line 7, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 8, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .bg_photo {
-  height: 512px;
+  height: 630px;
 }
 
-/* line 11, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 12, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .filtre_vert {
   background-color: #7AB51D;
   opacity: 75%;
 }
 
-/* line 16, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 17, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .liens_menu {
   display: flex;
   justify-content: flex-end;
 }
 
-/* line 19, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 20, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .liens_menu a {
   color: #ffffff;
   width: 110px;
   margin: 10px;
 }
 
-/* line 26, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 27, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .image_menu {
   display: flex;
   justify-content: center;
 }
 
-/* line 31, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 32, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .titre_menu {
   display: flex;
   justify-content: center;
   color: #ffffff;
 }
 
-/* line 37, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 38, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .bandeau_menu {
   display: flex;
   justify-content: center;
@@ -43,53 +43,54 @@
   height: 50px;
 }
 
-/* line 42, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 43, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .bandeau_menu .cadre_jaune_menu {
   background-color: #F7CB06;
   flex-grow: 1;
 }
 
-/* line 46, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 47, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .bandeau_menu .logo_ab {
   height: 50px;
   width: 50px;
 }
 
-/* line 50, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 51, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .bandeau_menu .cadre_vert_menu {
   background-color: #7AB51D;
   flex-grow: 1;
 }
 
-/* line 57, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 58, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .cadre_jaune_menu h2 {
   text-align: center;
 }
 
-/* line 60, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 61, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .cadre_jaune_menu a {
   color: #000000;
 }
 
-/* line 66, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 67, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .cadre_vert_menu h2 {
   text-align: center;
 }
 
-/* line 69, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 70, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .cadre_vert_menu a {
   color: #000000;
 }
 
-/* line 74, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 75, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .image_fond {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   z-index: -1;
+  width: 100%;
 }
 
-/* line 81, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 83, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .row {
   display: flex;
   justify-content: center;
@@ -97,16 +98,55 @@
   z-index: -1;
 }
 
-/* line 86, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 88, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .row .cadre_vert {
   flex-grow: 1;
   background-color: #7AB51D;
 }
 
-/* line 90, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
+/* line 92, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_menu.scss */
 .row .cadre_jaune {
   flex-grow: 1;
   background-color: #F7CB06;
+}
+
+/* line 2, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_actus.scss */
+.zone_actualites {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+/* line 8, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_actus.scss */
+.titre_actu {
+  display: flex;
+  flex-direction: row;
+}
+
+/* line 13, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_actus.scss */
+.actu {
+  display: flex;
+  justify-content: center;
+}
+
+/* line 16, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_actus.scss */
+.actu .image_actu {
+  margin-left: 10%;
+  height: 100%;
+  width: auto;
+}
+
+/* line 21, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_actus.scss */
+.actu .texte_actu {
+  margin-left: 3%;
+  width: 80%;
+}
+
+/* line 8, ../../../../../wamp64/www/MIW/HTML-CSS/2020_legumontagne/css/scss/_legumes.scss */
+#legumes {
+  background-color: #7AB51D;
+  background-image: url("../img/texte-legumes-de-saison.png");
+  height: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
