--- a/CEO-Referencement/TP1/css/styleOld.css
+++ b/CEO-Referencement/TP1/css/styleOld.css
@@ -1,9 +1,4 @@
-
-
-
-
-
-/*body {
+body {
     margin: 0;
     padding: 0;
     text-rendering: optimizeLegibility;
@@ -205,4 +200,4 @@ footer {
     clear: both;
     background-color: black;
     height: 50px;
-}*/
+}
