--- a/CEO-Referencement/TP1/css/style.css
+++ b/CEO-Referencement/TP1/css/style.css
@@ -1,3 +1,4 @@
+/*Menu CSS*/
 header{
     width: 100%;
     display: flex;
@@ -5,10 +6,27 @@ header{
 }
 
 .logo{
-    width: 20%;
+    width: 48%;
     height: auto;
 }
 
+nav{
+    width: 48%;
+}
+
+.link_menu{
+    display: flex;
+    list-style-type: none;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0;
+    padding: 0;
+}
+
+li a {
+
+    width: 25%;
+}
 
 
 
