--- a/CEO-Referencement/TP1/css/style.css
+++ b/CEO-Referencement/TP1/css/style.css
@@ -3,11 +3,13 @@ header{
     width: 100%;
     display: flex;
     flex-direction: row;
+    background-color: white;
 }
 
 .logo{
     width: 48%;
     height: auto;
+    padding: 0.7em;
 }
 
 nav{
@@ -23,16 +25,21 @@ nav{
     padding: 0;
 }
 
-li a {
-
-    width: 25%;
+li a{
+    width: 20%;
+    box-sizing: border-box;
+    display: inline-block;
+    padding-bottom: 1.5em;
+    padding-top: 1.5em;
+    color: #37474f;
+    text-transform: uppercase;
+    text-decoration: none;
+    line-height: 2.5;
 }
 
 
-
-/*body {
-    margin: 0;
-    padding: 0;
+/*Body CSS*/
+body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -42,36 +49,21 @@ li a {
     font-size: 1em;
     line-height: 1.6;
 }
-
 .container {
-    width: 960px;
+    width: 360px;
     margin: auto;
 }
 
-header {
-    height: 88px;
-    background-color: white;
-}
 
-#n134 {
-    padding: 1.1em 2.5em .9em 1em;
-    height: 60px;
+@media only screen and (min-width: 960px){
+
 }
+/*
 
 header nav {
     float: right;
     height: 100%;
     position: relative;
-}
-
-header nav ul {
-    margin: 0;
-    padding: 0;
-}
-
-header nav li {
-    margin: 0;
-    display: inline;
 }
 
 header nav a {
