fin css article top

--- a/CEO-Referencement/TP1/css/style.css
+++ b/CEO-Referencement/TP1/css/style.css
@@ -10,7 +10,7 @@ body {
     line-height: 1.6;
 }
 .container {
-    width: 360px;
+    width: 100%;
     margin: auto;
 }
 /*FIN CSS General*/
@@ -99,6 +99,9 @@ li a{
     display: flex;
     flex-direction: row;
 }
+/*FIN CSS Article right*/
+
+/*FIN CSS*/
 
 .article-right article {
     width: 50%;
