--- a/CEO-Referencement/TP1/css/style.css
+++ b/CEO-Referencement/TP1/css/style.css
@@ -147,7 +147,7 @@ ul.tags li a {
 .region-main article{
     display: flex;
     flex-direction: row;
-    padding: 2.5em;
+    padding: 2em;
 }
 
 .region-main img{
@@ -166,67 +166,37 @@ ul.tags li a {
     font-size: 1.2em;
 }
 
-@media only screen and (min-width: 960px){
-
-}
-/*
-
-
-
-
-
-#region-main {
-    clear: both;
-    margin-top: 2em;
-    float: left;
-    width: 66%;
-}
-
-#region-main article {
-    height: 120px;
-    overflow: hidden;
-    margin-bottom: 2em;
-}
-
-#region-main article img {
-    float: left;
-    margin-right: 30px;
-    width: 200px;
-}
-
-#region-main article h1 {
-    margin: 0;
-}
-
-#region-main article p {
-    margin: 0;
-}
-
-#region-main article .tags a {
+.region-main article .tags a {
     text-decoration: none;
     color: #1875d1;
 }
+/*FIN CSS region main*/
 
-#region-sidebar {
-    float: right;
-    width: 34%;
+
+
+
+/*CSS Formulaire*/
+.region-sidebar{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 80%;
     background-color: #f5f5f5;
-    padding: 2em;
-    box-sizing: border-box;
-    height: 490px;
+    margin: 5% 10% 5% 10%;
+    padding: 5% 10% 5% 10%;
     color: #666;
 }
 
-#region-sidebar h1 {
+.region-sidebar h1 {
     font-size: 1em;
 }
 
-#region-sidebar label {
-    width: 100px;
+.region-sidebar label {
+    width: 40%;
     display: inline-block;
 }
 
-#region-sidebar input[type=submit] {
+.region-sidebar input[type=submit] {
     background-color: #5677fc;
     border-radius: 2px;
     font-weight: 500;
@@ -239,8 +209,18 @@ ul.tags li a {
     font-size: 0.9em;
 }
 
+/*FIN CSS formulaire*/
+
+
+/*CSS footer*/
 footer {
+    width: 100%;
     clear: both;
     background-color: black;
     height: 50px;
-}*/
+}
+
+
+@media only screen and (min-width: 960px){
+
+}
