css exo ceo => 90%

--- a/CEO-Referencement/TP1/css/style.css
+++ b/CEO-Referencement/TP1/css/style.css
@@ -290,4 +290,12 @@ footer {
     .container{
         width: 75%;
     }
+
+    .region-main h2{
+        font-size: 2em;
+    }
+
+    .region-main p{
+        font-size: 1.4em;
+    }
 }
