--- a/CEO-Referencement/TP2/css/scss/style.scss
+++ b/CEO-Referencement/TP2/css/scss/style.scss
@@ -174,6 +174,7 @@ footer{
       display: none;
     }
     a{
+      color: #FFFFFF;
       display: flex;
       justify-content: center;
       flex-direction: row;
@@ -183,6 +184,7 @@ footer{
     }
     a:hover{
       background-color: #10435F;
+      color: #FFFFFF;
       width: 175px;
       p:last-child{
         margin-left: 25px;
